# transformers_kaggle

./: .gitignore  README.md  pyproject.toml
imdb-bert/: README.md  model.py  predict.py  requirements.txt  train.py  utils.py
imdb-bert/checkpoints/: config.json
